# Univeristy-Chatbot

./: Pipfile  README.md  ingestion.py  main.py  pyproject.toml  requirements.txt
backend/: consts.py  core.py
