[project]
name = "documentation-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.37",
    "python-dotenv",

"requests",
    "pillow",
    "certifi",

    "langsmith",
    "langchain-community",
    "langchain-core",
    "langchain-openai",
    "langchain-pinecone",
    "langchain-tavily",
    "langchain-huggingface",
    "langchain-chroma",
    "langchain-classic",
    "langchain-groq",

    "rich",
]
